cp3-networkpolicy/egress/iaf/bedrock-egress-ibm-flink-operator.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: egress-ibm-flink-operator
  namespace: "csNamespace"
spec:
  podSelector: {}
  egress:
    - ports:
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 9443
      to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: flink-kubernetes-operator
  policyTypes:
    - Egress
