cp3-networkpolicy/egress/iaf/bedrock-egress-ibm-opensearch-operand.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: egress-ibm-opensearch-operand
  namespace: "opensearchNamespace"
spec:
  podSelector: {}
  egress:
    - ports:
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 9443
      to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/managed-by: ibm-elasticsearch
  policyTypes:
    - Egress
